Start a stopped workspace with one ensure, not a delete first
qits-containers 354fd7f gives the RESTART step a `docker start` of the
container that is still there, so the reason `start` removed the stopped
container before asking for the place again is gone. It is one ensure
now. The container keeps its id and its writable layer across the call,
which makes the resume lossless whether or not persist-workspace put the
checkout on a volume — so the caveat that said otherwise goes too.

The delete was not merely unnecessary, it would have been refused.
container_name carries a table-wide unique constraint that a delete does
not free (the place index is partial on desired_state <> 'ABSENT'; the
name column is not), so a fresh ensure under the same name after a row
delete collides until the P7D prune horizon passes. The test says so
where the delete used to be asserted.

The identity-taking signature stays: the orchestrator has no start route,
so a stopped place is started by asking for it again with its spec, and
the spec is derived from the workspace.

Tests: 486, unchanged — the start case is rewritten, not added to.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>